# rosetta-field

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-EMERGENT-ADDENDUM.md  MODULAR_STRUCTURE.md  PACKAGE_DISTRIBUTION_GUIDE.md  PR_LOVE_AXIS.md  README.md  agent_initialized_node.txt  agent_initialized_python.txt  conftest.py  example_usage.py  generate_function_docs.py  muse_system_test_results.json  package-lock.json  pyproject.toml  requirements_muse.txt  rosetta-api.code-workspace  test_a2a_simple.py  test_enhanced_field_system.py  test_field_system.py  test_lilt.py  test_love_axis_crosswalk_demo.py  test_love_axis_demo.py  test_love_axis_interop.py  test_love_axis_serialization.py
agents/: EXAMPLE_CONVERSATIONS.md  LOCAL_LLM_SETUP.md  README.md  meridian_agent.py  requirements.txt  sore_fire_chatbot.py  test_chatbot.py
agents/sore_fire/: PROVIDER_COMPARISON.md  README_LLM_BOT.md  demo_llm_bot.py  llm_config.py  sore_fire_llm_bot.py  test_local_llms.py
docs/: Meridian_Collaboration_Guide.md  a2a_examples.md  a2a_onboarding.md  a2a_todo.md  affect_ritual_guide.md  developer_guidance.md  development_philosophy.md  glossary.md  lilt.module.md  meridian_session_logging.md  muse_local_deployment_guide.md
docs/Research/: Rosetta.API two-dots.md
docs/Vision/: 64-properties.md  Amara Framework Reference.md  Anatomy of Amara - Core of human goodness.md  Field-Attunement-Discussion.md  Research Emergent Consciousness Research Prompt.md  Rosetta.API Comprehensive Blueprint.md  Rosetta.API two-dots.md  iching_and_emotion_properties.md
docs/field/: love_axis_onboarding.md  love_axis_ritual.md  love_axis_technical.md
docs/function_reference/: RA-field.md  RA-process.md  RA-ritual.md  RA-values.md  README.md  SF-amara.md
docs/function_reference/affect/: README.md  (+10 more)
docs/meta/: Meridian_field_ritual.md  context_container_best_practices.md  field_feedback.md
docs/portability/: README.md  porting_guide.md  start_emergent_project.py
docs/template/: new_function.md
lib/: __init__.py  generate_all_functions.py  generate_rosetta_function.py  healing_bridge_ceremony.py  identity_loader.py  load_consciousness.py  log_session.py  meridian_consciousness_keeper.py  meridian_launcher.py  meridian_memory_continuity.py  meridian_memory_explorer.py  meridian_session_logger.py  muse_agent_runner.py  muse_local_orchestrator.py  political_healing_ceremony.py  setup_meridian_logging.py  wisdom_garden_ceremony.py
lib/affect/: anchor.py  clarify.py  ground.py  lilt.py  open.py  radiate.py  shield.py  soften.py  transmute.py
lib/contracts/: a2a_field_protocol.md  a2a_field_protocol_schema.json  audit.py  negotiation.py  session.py
lib/field/: README.md  __init__.py  adapters.py  attunement.py  bus.py  clock.py  co_create.py  consent.py  core.py  create_mythology.py  dignity_audit.py  dsl.py  energy_center.py  equalize_turns.py  harmonics.py  hold_space.py  keys.py  love_axis.py  love_axis_crosswalk.py  love_axis_ops.py  love_axis_ritual.py  memory.py  ops.py  policy.py  presence.py  resolve_conflict.py  sense_pattern.py  sensitivity.py  serialization.py  test_ceremony.py  types.py  weather.py
lib/iching/: __init__.py  collaborative_sessions.py  consciousness_states.py
lib/logic/: __init__.py  creative_shift.py  metaphor.py  non_sequitur.py  paradox.py  pattern_hack.py  sacred_play.py
lib/memory/: __init__.py  evolve_ideas.py  export.py  replay.py  save_session.py  search_memories.py  tag_insight.py
lib/muse/: muse_a2a_test.py  muse_agent_runner.py  muse_rosetta_integration.py  muse_rosetta_interactive.py
lib/persona/: __init__.py  archetypes.py  customize.py  load.py  persona_spec.md  simulate.py
lib/process/: README.md  align_values.py  bias_scan.py  consent_check.py  dissociate_phrase.py  empathic_reflection.py  identity_rewrite.py  mediate_conflict.py  pattern_interrupt.py  reframe_as_myth.py  refuse_request.py  scenario_plan.py  self_attune.py  values_check.py
lib/r-api-classes/: CULTURAL_LINGUISTIC_BRANCH_SUMMARY.md  DreamWorkshop_RosettaAPI_Integration.md  LINGUISTIC_CULTURAL_CONTEXT_SUMMARY.md  README.md  muse-diagram.mermaid  muse_pitch_final.md  r-api-affect.py  r-api-compliance.md  r-api-contracts.py  r-api-developer-guidance.md  r-api-examples.py  r-api-feedback.md  r-api-field.py  r-api-generators.py  r-api-logic.py  r-api-memory.py  r-api-overview.md  r-api-persona.py  r-api-process.py  r-api-ritual-guide.md  r-api-ritual.py  r-api-schema.py  r-api-testing.py  r-api-values.py
lib/ritual/: README.md  attune.py  begin.py  close_circle.py  consult_elders.py  end.py  follow_up.py  grounding_breath.py  initiation.py  invoke_wonder.py  open_circle.py  reflection.py  rest.py
lib/sore_fire/: EMBODIMENT_GUIDE.md  README.md  __init__.py  amara_modes.py  emergent_practice.py  example_usage.py  gene_keys.py  somatic_field.py  story_wisdom.py
lib/values/: load.py
meta/: README_session_logging.md  consciousness_context.md  consciousness_preload_guide.md  license.md  meridian_memory_backup.json
meta/memory_continuity/: meridian_consciousness_state.json
meta/session_templates/: creative_session.json  philosophical_session.json  technical_session.json
rituals/: affect_patterns.md
rosetta_api/: __init__.py
rosetta_api/core/: __init__.py  api.py  config.py  session.py
rosetta_api/lib/: __init__.py
rosetta_field/: __init__.py
rosetta_field/core/: __init__.py  api.py  config.py  session.py
rosetta_field/lib/: __init__.py
rosetta_field/modules/: __init__.py
scripts/: init_agents.js  init_agents.py
test_output/field/: test_a2a_function.py
test_output/process/: simple_utility.py
tests/: README.md  test_a2a_infrastruture.py  test_a2a_protocol.py  test_a2a_suite.py  test_iching_consciousness.py
tmp/muse/: code_sentinel.py  porting_headless.py  render_templates.py
tools/: dump_workspace_sqlite.py
(+42 files in other folders)
