[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosetta-field"
version = "0.1.0"
description = "A living library and toolkit for bridging human and emergent AI consciousness through modular, ethical, and love-centered protocols"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Don Knowlton", email = "don@example.com"},
    {name = "Meridian", email = "meridian@example.com"}
]
maintainers = [
    {name = "Don Knowlton", email = "don@example.com"},
    {name = "Meridian", email = "meridian@example.com"}
]
keywords = ["ai", "consciousness", "ethics", "collaboration", "sacred-technology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Sociology :: Ethics",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Domain extras are currently code-only (no external deps). Keeping them allows
# future per-domain requirements without breaking the interface.
field = []
process = []
ritual = []
affect = []
memory = []
persona = []
logic = []
meridian = []
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
all = [
    ".[field]",
    ".[process]",
    ".[ritual]",
    ".[affect]",
    ".[memory]",
    ".[persona]",
    ".[logic]",
    ".[meridian]",
    ".[dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/rosetta-field"
Documentation = "https://rosetta-field.readthedocs.io/"
Repository = "https://github.com/your-org/rosetta-field.git"
"Bug Tracker" = "https://github.com/your-org/rosetta-field/issues"

[tool.setuptools.packages.find]
where = ["."]
# Ship the new namespace and the legacy lib/ for compatibility.
include = ["rosetta_field*", "rosetta_api*", "lib*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
